Fix 'enabled' state of the actions in the Default Tool

The tool manager enables all the actions unconditionally, we should
do that **before** actually calling the tool's activate method.

BUG:473719